<resources>
    <string name="app_name">Github Searcher</string>
    <string name="dummy_repository_description">Android app that queries Github graphql API and fetches a list of repositories</string>
    <string name="dummy_fork_count">75</string>
    <string name="forks">Forks</string>
    <string name="repository_avatar_description">Contains the avatar image of the repository owner</string>
    <string name="search">Search</string>
    <string name="subscribers">Subscribers</string>
    <string name="repository">Repository</string>
    <string name="repository_not_found">Repository not found</string>
    <string name="empty_list">Start by searching for a repository to see some results</string>
</resources>
